image fix and buttons

--- a/art.html
+++ b/art.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Conscious Shop</title>
+    <title>Conscious Art</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -50,7 +50,7 @@
                 a Custom Cup</button>
         </div>
         <div class="home-bg-vid art-vid" id="vidContainer">
-            <video id="vidItself" class="home-bg-vid" autoplay loop muted playsinline>
+            <video id="vidItself" class="home-bg-vid" loop muted playsinline>
                 <source src="./assets/img/art-bg.mp4">
             </video>
         </div>
@@ -60,7 +60,7 @@
     <div class="container product-grid">
         <div class="justify-self-end design-btn-mobile text-center">
             <button
-                onclick="function(){location.href = 'https://docs.google.com/forms/d/1bMuBJzeuJtotC3DcSO706fPOWCdl2AqsM10i0Rc1lPc/viewform?edit_requested=true'}">Design
+            onclick="goToLink('https://docs.google.com/forms/d/1bMuBJzeuJtotC3DcSO706fPOWCdl2AqsM10i0Rc1lPc/viewform?edit_requested=true')">Design
                 a Custom Cup</button>
         </div>
         <div class="row justify-content-center ">
