--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
                     class="fa-solid fa-2x fa-volume-high"></i></a>
             <a id="unmute-btn-mobile" class="unmute-btn"> <i class="fa-solid fa-2x fa-volume-xmark"></i></a>
         </div>
-        <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i class="fa-solid fa-2x fa-bag-shopping"></i></a>
+        <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i class="fa-solid fa-3x mobile-2x fa-bag-shopping"></i></a>
         </div>
-        <div class="art-btn grad-shadow-5"> <a href="./art.html"> <i class="fa-solid fa-2x fa-paintbrush"></i></a>
+        <div class="art-btn grad-shadow-5"> <a href="./art.html"> <i class="fa-solid fa-3x mobile-2x fa-paintbrush"></i></a>
         </div>
 
         <div class="nav-bar">
