--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,7 @@
 </head>
 
 <body class="scroll page">
-    <audio id="player2" loop autoplay>
+    <audio id="player2" loop>
         <source src="./assets/sound/waterfall.m4a" type="audio/mp4">
     </audio>
     <div class="sound-ctrl-mobile grad-shadow-5"> <a id="mute-btn-mobile2" class="mute-btn"> <i
