fix link and autoplay

--- a/art.html
+++ b/art.html
@@ -50,7 +50,7 @@
                 a Custom Cup</button>
         </div>
         <div class="home-bg-vid art-vid" id="vidContainer">
-            <video id="vidItself" class="home-bg-vid" loop muted playsinline>
+            <video id="vidItself" class="home-bg-vid" loop muted playsinline autoplay>
                 <source src="./assets/img/art-bg.mp4">
             </video>
         </div>
