--- a/shop.html
+++ b/shop.html
@@ -266,7 +266,7 @@
                         <div class="product-subtitle">Code: CONSCIOUSCUPS for 25% off</div>
                         <div class="product-text text-center card-buttons"><button onclick="copy('CONSCIOUSCUPS', this)"
                                 class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
-                                onclick="goToLink('https://https://unitywellness.co/')" class="code-btn">Go to
+                                onclick="goToLink('https://unitywellness.co/')" class="code-btn">Go to
                                 Site</button></div>
                     </div>
                 </div>
