--- a/art.html
+++ b/art.html
@@ -44,7 +44,7 @@
             <!-- <span class="logo-text">Conscious Cups</span> -->
         </a>
         <div class="margin-auto"></div>
-        <div class="justify-self-end mr-30 design-btn">
+        <div class="justify-self-end mr-105 design-btn">
             <button
                 onclick="goToLink('https://docs.google.com/forms/d/1bMuBJzeuJtotC3DcSO706fPOWCdl2AqsM10i0Rc1lPc/viewform?edit_requested=true')">Design
                 a Custom Cup</button>
@@ -58,14 +58,18 @@
 
 
     <div class="container product-grid">
+        <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i
+                    class="fa-solid fa-3x mobile-2x fa-bag-shopping"></i></a>
+        </div>
         <div class="justify-self-end design-btn-mobile text-center">
             <button
-            onclick="goToLink('https://docs.google.com/forms/d/1bMuBJzeuJtotC3DcSO706fPOWCdl2AqsM10i0Rc1lPc/viewform?edit_requested=true')">Design
+                onclick="goToLink('https://docs.google.com/forms/d/1bMuBJzeuJtotC3DcSO706fPOWCdl2AqsM10i0Rc1lPc/viewform?edit_requested=true')">Design
                 a Custom Cup</button>
         </div>
         <div class="row justify-content-center ">
-            <div class="header-text text-center">Cups on Display Custom Made for Early Conscious Cups Community
-                Members</div>
+            <div class="header-text text-center">Cups on Display Custom Made for Early Conscious Cups <span
+                    class="no-wrap">Community
+                    Members</span></div>
         </div>
         <div class="row justify-content-center">
             <div class="col-md-4  art-col">
