--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                 style="enable-background:new 0 0 501 501;" xml:space="preserve">
                 <style type="text/css">
                     .bg {
-                        fill: #fff;
+                        fill: #000;
                     }
 
                     .steam {
-                        stroke: #000;
-                        fill: none;
+                        stroke: url(#Gradient1);
                         stroke-width: 4px;
+                        stroke-miterlimit: 10;
                     }
 
                     .cup {
-                        fill: #fff;
-                        stroke: #7B4436;
+                        fill: #000;
+                        stroke: url(#Gradient1);
                         stroke-width: 4px;
                         stroke-miterlimit: 10;
                     }
@@ -58,7 +58,8 @@
                     }
 
                     .sleeve {
-                        fill: #7B4436;
+                        stroke: url(#Gradient1);
+                        stroke-width: 4px;
 
                     }
 
@@ -83,9 +84,9 @@
                     }
 
                     .lid {
-                        fill: #7B4436;
-                        stroke: #7B4436;
-                        stroke-width: 1;
+                        stroke: url(#Gradient1);
+                        
+                        stroke-width: 4px;
                         stroke-miterlimit: 10;
                     }
                 </style>
@@ -137,9 +138,11 @@
                     class="fa-solid fa-2x fa-volume-high"></i></a>
             <a id="unmute-btn-mobile" class="unmute-btn"> <i class="fa-solid fa-2x fa-volume-xmark"></i></a>
         </div>
-        <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i class="fa-solid fa-3x mobile-2x fa-bag-shopping"></i></a>
+        <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i
+                    class="fa-solid fa-3x mobile-2x fa-bag-shopping"></i></a>
         </div>
-        <div class="art-btn grad-shadow-5"> <a href="./art.html"> <i class="fa-solid fa-3x mobile-2x fa-paintbrush"></i></a>
+        <div class="art-btn grad-shadow-5"> <a href="./art.html"> <i
+                    class="fa-solid fa-3x mobile-2x fa-paintbrush"></i></a>
         </div>
 
         <div class="nav-bar">
