--- a/shop.html
+++ b/shop.html
@@ -54,7 +54,7 @@
             <a id="unmute-btn2"> <i class="fa-solid fa-3x fa-volume-xmark"></i></a>
         </div>
         <div class="margin-auto"></div>
-        <div class="justify-self-end mr-30 design-btn">
+        <div class="justify-self-end mr-105 design-btn">
             <button onclick="goToLink('https://www.projectwaterfall.org/')">Donate to Project Waterfall</button>
         </div>
 
@@ -65,30 +65,38 @@
         </video>
     </div>
     <div class="container product-grid">
-
+        <div class="art-btn shop-page grad-shadow-5"> <a href="./art.html"> <i
+                    class="fa-solid fa-3x mobile-2x fa-paintbrush"></i></a>
+        </div>
+        <div class="row justify-content-center ">
+            <div class="header-text text-center">All of the products shown are curated by our team and meet our
+                conscious criteria. </div>
+        </div>
         <div class="row full-page justify-content-center">
             <div class="col-lg-4 col-md-6 align-items-center product-wrap flip-container justify-content-center">
                 <div class="product-box text-center justify-content-center flipper">
                     <div class="front">
                         <div class="product-img-wrap text-center"><img class="product-img"
-                                src="./assets/img/product-img/tacuba.png" alt=""></div>
-                        <div class="product-title text-center">Tacuba Coffee</div>
-                        <div class="product-subtitle text-center">Sustainably-Farmed Coffee</div>
+                                src="./assets/img/product-img/kobrick.png" alt=""></div>
+                        <div class="product-title text-center">Kobrick Coffee</div>
+                        <div class="product-subtitle text-center">Organic, Fair-Trade Coffee</div>
                     </div>
                     <div class="product-back back">
                         <div class="product-title"><img class="product-img" height="80px"
-                                src="./assets/img/product-img/tacuba.png" alt="">Tacuba Coffee</div>
+                                src="./assets/img/product-img/kobrick.png" alt="">Kobrick Coffee</div>
                         <div class="product-text">
-                            Tacuba uses regenerative agriculture techniques at their Salvadoran farms. Tacuba is a
-                            veteran-owned small business.
+                            All organic, fair-trade certified, bird friendly coffee from across the globe. Visit them in
+                            the Meatpacking District of NYC!
                         </div>
-                        <div class="sub-filler"></div>
-                        <div class="product-text text-center card-buttons"><button
-                                onclick="goToLink('https://tacubacoffeeco.com/')" class="code-btn">Go to Site</button>
+                        <div class="product-subtitle">Code: consciouscups for 15% off</div>
+                        <div class="product-text text-center card-buttons"><button onclick="copy('consciouscups', this)"
+                                class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
+                                onclick="goToLink('https://www.kobricks.com/')" class="code-btn">Go to Site</button>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-4 col-md-6 align-items-center product-wrap flip-container justify-content-center">
                 <div class="product-box text-center justify-content-center flipper">
                     <div class="front">
@@ -180,29 +188,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 align-items-center product-wrap flip-container justify-content-center">
-                <div class="product-box text-center justify-content-center flipper">
-                    <div class="front">
-                        <div class="product-img-wrap text-center"><img class="product-img"
-                                src="./assets/img/product-img/kobrick.png" alt=""></div>
-                        <div class="product-title text-center">Kobrick Coffee</div>
-                        <div class="product-subtitle text-center">Organic, Fair-Trade Coffee</div>
-                    </div>
-                    <div class="product-back back">
-                        <div class="product-title"><img class="product-img" height="80px"
-                                src="./assets/img/product-img/kobrick.png" alt="">Kobrick Coffee</div>
-                        <div class="product-text">
-                            All organic, fair-trade certified, bird friendly coffee from across the globe. Visit them in
-                            the Meatpacking District of NYC!
-                        </div>
-                        <div class="product-subtitle">Code: consciouscups for 15% off</div>
-                        <div class="product-text text-center card-buttons"><button onclick="copy('consciouscups', this)"
-                                class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
-                                onclick="goToLink('https://www.kobricks.com/')" class="code-btn">Go to Site</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div class="col-lg-4 col-md-6 align-items-center product-wrap flip-container justify-content-center">
                 <div class="product-box text-center justify-content-center flipper">
                     <div class="front">
@@ -381,6 +367,28 @@
                         <div class="product-text text-center card-buttons"><button onclick="copy('cups15', this)"
                                 class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
                                 onclick="goToLink('http://www.krabot.com/')" class="code-btn">Go to Site</button></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 align-items-center product-wrap flip-container justify-content-center">
+                <div class="product-box text-center justify-content-center flipper">
+                    <div class="front">
+                        <div class="product-img-wrap text-center"><img class="product-img"
+                                src="./assets/img/product-img/tacuba.png" alt=""></div>
+                        <div class="product-title text-center">Tacuba Coffee</div>
+                        <div class="product-subtitle text-center">Sustainably-Farmed Coffee</div>
+                    </div>
+                    <div class="product-back back">
+                        <div class="product-title"><img class="product-img" height="80px"
+                                src="./assets/img/product-img/tacuba.png" alt="">Tacuba Coffee</div>
+                        <div class="product-text">
+                            Tacuba uses regenerative agriculture techniques at their Salvadoran farms. Tacuba is a
+                            veteran-owned small business.
+                        </div>
+                        <div class="sub-filler"></div>
+                        <div class="product-text text-center card-buttons"><button
+                                onclick="goToLink('https://tacubacoffeeco.com/')" class="code-btn">Go to Site</button>
+                        </div>
                     </div>
                 </div>
             </div>
