hide shop and art

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
                     class="fa-solid fa-2x fa-volume-high"></i></a>
             <a id="unmute-btn-mobile" class="unmute-btn"> <i class="fa-solid fa-2x fa-volume-xmark"></i></a>
         </div>
-        <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i
+        <div hidden class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i
                     class="fa-solid fa-3x mobile-2x fa-bag-shopping"></i></a>
         </div>
-        <div class="art-btn grad-shadow-5"> <a href="./art.html"> <i
+        <div hidden class="art-btn grad-shadow-5"> <a href="./art.html"> <i
                     class="fa-solid fa-3x mobile-2x fa-paintbrush"></i></a>
         </div>
 
@@ -186,7 +186,8 @@
             </mask>
             <image xlink:href="./assets/img/draw-bg-2.png" mask="url(#mask1)" id="under-img"></image>
         </svg>
-        <div id="btnJoin" class="btn-join">Join</div>
+        <div id="btnJoin" class="btn-join">Follow</div>
+        <!-- <div id="btnJoin" class="btn-join">Join</div> -->
         <div class="social-container" id="socialContainer">
             <div class="social-btn btn1">
                 <a href="https://discord.gg/eKSxT46Z4n" target="_blank">
